--- a/index.html
+++ b/index.html
@@ -5,13 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy New Year</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        
+        <section id="banner-area" class="container">
+            <div class="banner-text">
+                <h3>Happy New Year</h3>
+                <h1>New Year Party Celebration</h1>
+            </div>
+        </section>
     </header>
     <main>
-
+        <section class="container">
+            <div class="discount-area">
+                <div class="discount-text">
+                    <h1>65% OFF</h1>
+                    <h5>OUR HOLIDAY DEALS ARE BETTER</h5>
+                    <h2>ALL CATEGORIES</h2>
+                </div>
+                <div class="discount-image">
+                    <img src="images/new-year-photo.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section id="midnight-section" class="container">
+            <div class="midnight-area">
+                <div class="midnight-text">
+                    <h1>Welcome to midnight party</h1>
+                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                    <button class="btn"><a href="">Join Now</a></button>
+                </div>
+                <div class="midnight-image">
+                    <img src="images/2024.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section id="park-hotel-area" class="container">
+            <div class="park-hotel">
+                <h2><span class="span-tag">Place:</span> New Park Hotel</h2>
+                <h2><span class="span-tag">Date:</span> 31 December Night 2023</h2>
+                <h2><span class="span-tag">Time:</span> Evening 7.30 pm to 12.30 am</h2>
+                <button class="bbtn"><a href="">Join Now</a></button>
+            </div>
+        </section>
     </main>
     <footer>
 
