--- a/index.html
+++ b/index.html
@@ -51,6 +51,40 @@
                 <button class="bbtn"><a href="">Join Now</a></button>
             </div>
         </section>
+        <section id="comming-area" class="container">
+            <div class="comming-soon-area">
+                <div class="best-offer">
+                    <h3>NEW BEST OFFER</h3>
+                    <h1>Coming Soon</h1>
+                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                </div>
+                <div class="celebrete">
+                    <img src="images/celebrete.png" alt="">
+                </div>
+                <div class="new-year">
+                    <h1>2024</h1>
+                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                    <img src="images/nnew-year.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section  id="holiday-off-area" class="container">
+            <div class="holiday-area">
+                <h3>WHAT IS FUNCTIONAL</h3>
+                <h1><span>Holidays</span> Sale 50%</h1>
+                <p>Dolor sit amet consectetur. Consequat eget   
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+            </div>
+            <div class="holiday-image">
+                <div class="box-image">
+                    <img src="images/box.png" alt="">
+                </div>
+                <div class="picture-area">
+                    <img class="image-1" src="images/off.png" alt="">
+                    <img class="image-2" src="images/ledis.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
