--- a/index.html
+++ b/index.html
@@ -79,11 +79,39 @@
                 <div class="box-image">
                     <img src="images/box.png" alt="">
                 </div>
-                <div class="picture-area">
+                 <div class="picture-area">
                     <img class="image-1" src="images/off.png" alt="">
                     <img class="image-2" src="images/ledis.png" alt="">
+                 </div>
+            </div>
+        </section>
+        <section id="six-image" class="container">
+            <div class="gift-text">
+                <h3>THE BEST GIFTS</h3>
+                <h1>Our Awesome Portfolio</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div class="image-parent">
+                <div class="imagess">
+                    <img src="images/image1.png" alt="">
+                </div>
+                <div class="imagess">
+                    <img src="images/image2.png" alt="">
+                </div>
+                <div class="imagess">
+                    <img src="images/image3.png" alt="">
+                </div>
+                <div class="imagess">
+                    <img src="images/image4.png" alt="">
+                </div>
+                <div class="imagess">
+                    <img src="images/image5.png" alt="">
+                </div>
+                <div class="imagess">
+                    <img src="images/image6.png" alt="">
                 </div>
             </div>
+
         </section>
     </main>
     <footer>
