--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/548682fdc1.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -71,8 +72,8 @@
         <section  id="holiday-off-area" class="container">
             <div class="holiday-area">
                 <h3>WHAT IS FUNCTIONAL</h3>
-                <h1><span>Holidays</span> Sale 50%</h1>
-                <p>Dolor sit amet consectetur. Consequat eget   
+                <h1><span class="holi">Holidays</span> Sale 50%</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br> 
                     molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
             </div>
             <div class="holiday-image">
@@ -113,9 +114,51 @@
             </div>
 
         </section>
+        <section id="total-sub-area" class="container">
+            <div class="subscribe-area">
+                <div class="subscribe-item">
+                    <div class="subscribe-texxt">
+                    <div class="gmail-img-sectionn">
+                        <img class="gmail-img" src="images/gmail.png" alt="">
+                    </div>
+                    <h1>Subscribe Newsletter</h1>  
+                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                    </div>  
+                    <div class="input-areaa">
+                        <input type="email" placeholder="Enter Your Email" name="" id="enter-email">
+                        <button class="input-btn"><a href="">Subscribe</a></button>
+                    </div>            
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <section class="container">
+            <div class="all-footer-item">
+                <div class="first-text">
+                    <div class="f-top-text">
+                        <h2>44, Big Building Roosevelt Street <br>
+                            Beach Gardens Florida 33410</h2>
+                    </div>
+                    <div class="f-top-text">
+                        <h4><i class="fa-solid fa-phone-volume"> </i>  +00 123 584 124</h4>
+                        <h4> <i class="fa-solid fa-globe"> </i> www.website.com</h4>
+                    </div>
+                </div>
+                <hr>
+                <div class="icon-area">
+                    <a href=""><img src="images/icon1.png" alt=""></a>
+                    <a href=""><img src="images/icon2.png" alt=""></a>
+                    <a href=""><img src="images/icon3.png" alt=""></a>
+                    <a href=""><img src="images/icon4.png" alt=""></a>
+                </div>
+                <hr>
+                <div class="last-text">
+                    <h4>2017, All Rights Reserved.</h4>
+                    <h4>Unsubscribe</h4>
+                </div>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
